Agregado de faqs cuidado de personas

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="https://wa.me/5492923507590" target="_blank"
               ><i class="bi bi-whatsapp"></i
             ></a>
-            <a href="https://wa.me/5492923507590" target="_blank"
+            <a href="https://www.facebook.com/share/1DCLJoP2Cr/" target="_blank"
               ><i class="bi bi-facebook"></i
             ></a>
             <a href="https://www.instagram.com/" class="instagram"
@@ -92,7 +92,9 @@
             <p>
               Brindamos soluciones profesionales de limpieza y mantenimiento
               para hogares, hoteles, oficinas, comercios, eventos y empresas.
-              ¡Contratá personal registrado y evitá complicaciones legales!
+              Además, ofrecemos servicios de asistencia y cuidado de personas
+              con personal capacitado. ¡Contratá personal registrado y evitá
+              complicaciones legales!
             </p>
             <div class="d-flex">
               <a href="#services" class="btn-get-started">Nuestros Servicios</a>
@@ -137,7 +139,7 @@
             <img
               src="assets/img/limpieza.jpg"
               alt="Sobre Coblan"
-              class="img-fluid rounded shadow"
+              class="img-fluid rounded shadow h-75 w-100"
             />
           </div>
 
@@ -152,11 +154,13 @@
               <p class="fst-italic">
                 En <strong>Coblan</strong>, somos una
                 <strong>empresa emergente</strong> con el propósito de
-                revolucionar el sector de la limpieza con un servicio
-                profesional, confiable y accesible. Nacimos con la misión de
-                ofrecer soluciones de limpieza que brinden tranquilidad y
-                bienestar a nuestros clientes, asegurando un entorno impecable
-                en hogares, oficinas, comercios y empresas.
+                revolucionar el sector de la limpieza, la asistencia y cuidado
+                de personas con un servicio profesional, confiable y accesible.
+                Nacimos con la misión de ofrecer soluciones que brinden
+                tranquilidad y bienestar a nuestros clientes, asegurando un
+                entorno impecable en hogares, oficinas, comercios y empresas,
+                además de contar con personal capacitado para el cuidado de
+                personas.
               </p>
               <ul>
                 <li>
@@ -195,7 +199,8 @@
                 crecer junto a nuestros clientes, innovando y adaptándonos a sus
                 necesidades. En <strong>Coblan</strong>, no solo limpiamos
                 espacios, sino que creamos ambientes ordenados y saludables para
-                el bienestar de todos.
+                el bienestar de todos, además de brindar un servicio
+                especializado en el cuidado y asistencia de personas.
               </p>
             </div>
           </div>
@@ -281,6 +286,33 @@
             </div>
           </div>
           <!-- End Service Item -->
+
+          <!-- Servicio: Asistencia y Cuidados de Personas -->
+          <div
+            class="col-lg-4 col-md-6 m-auto mt-4"
+            data-aos="fade-up"
+            data-aos-delay="300"
+          >
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-heart"></i>
+              </div>
+              <div class="stretched-link">
+                <h3>Asistencia y Cuidados de Personas</h3>
+              </div>
+              <p>
+                Brindamos atención, protección, acompañamiento y asistencia a
+                personas. Se puede realizar en el hogar o en el ámbito
+                comunitario.
+              </p>
+              <p>
+                <strong>Quiénes pueden recibir asistencia y cuidado:</strong>
+                Niños, niñas y adolescentes, adultos mayores.
+              </p>
+            </div>
+          </div>
+          <!-- End Service Item -->
+
           <div class="container mt-5">
             <div class="row">
               <div
@@ -453,7 +485,6 @@
         <div class="row justify-content-center">
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
             <form id="contact-form" method="POST" class="contact-form">
-
               <div class="row">
                 <!-- Nombre -->
                 <div class="col-md-6">
@@ -653,7 +684,9 @@
                 <div class="faq-content">
                   <p>
                     Para quejas y reclamos contáctenos:
-                    <a href="mailto:info@coblan.org">info@coblan.org</a>.
+                    <a href="mailto:info@coblan.org" class="text-light"
+                      >info@coblan.org</a
+                    >.
                   </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right m-2"></i>
@@ -666,6 +699,145 @@
                 </h3>
                 <div class="faq-content">
                   <p>Sí, tenemos personal disponible todos los días.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <!-- Pregunta 1 -->
+              <div class="faq-item">
+                <h3 class="m-2">
+                  ¿En qué consiste el servicio de asistencia y cuidado de
+                  personas?
+                </h3>
+                <div class="faq-content">
+                  <p>
+                    Brindamos atención, protección, acompañamiento y asistencia
+                    a personas en su hogar o en el ámbito comunitario,
+                    asegurando su bienestar y calidad de vida.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <!-- Pregunta 2 -->
+              <div class="faq-item">
+                <h3 class="m-2">¿A quiénes está dirigido este servicio?</h3>
+                <div class="faq-content">
+                  <p>
+                    Nuestro servicio está destinado a
+                    <strong>niños, niñas y adolescentes</strong>, así como a
+                    <strong>adultos mayores</strong> que requieran asistencia en
+                    su día a día.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <!-- Pregunta 3 -->
+              <div class="faq-item">
+                <h3 class="m-2">¿Qué tipo de asistencia brindan?</h3>
+                <div class="faq-content">
+                  <p>
+                    Ofrecemos asistencia en tareas diarias, acompañamiento en
+                    actividades recreativas, supervisión de la salud, apoyo
+                    emocional y asistencia en la higiene personal.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <!-- Pregunta 4 -->
+              <div class="faq-item">
+                <h3 class="m-2">¿El servicio se brinda solo en el hogar?</h3>
+                <div class="faq-content">
+                  <p>
+                    No, la asistencia también puede realizarse en hospitales,
+                    centros de día, residencias o en el ámbito comunitario según
+                    las necesidades de cada persona.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <!-- Pregunta 5 -->
+              <div class="faq-item">
+                <h3 class="m-2">¿El personal está capacitado?</h3>
+                <div class="faq-content">
+                  <p>
+                    Sí, contamos con profesionales capacitados y con experiencia
+                    en el cuidado de personas, garantizando un servicio seguro,
+                    confiable y de calidad.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <!-- Pregunta 6 -->
+              <div class="faq-item">
+                <h3 class="m-2">¿Cómo se elige al cuidador adecuado?</h3>
+                <div class="faq-content">
+                  <p>
+                    Evaluamos las necesidades específicas de cada persona y
+                    asignamos un cuidador acorde a sus requerimientos y
+                    preferencias.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <!-- Pregunta 7 -->
+              <div class="faq-item">
+                <h3 class="m-2">
+                  ¿Puedo contratar el servicio por horas o debe ser mensual?
+                </h3>
+                <div class="faq-content">
+                  <p>
+                    Ofrecemos opciones flexibles: podés contratar el servicio
+                    por horas, días específicos o en modalidad mensual según lo
+                    que necesites.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <!-- Pregunta 8 -->
+              <div class="faq-item">
+                <h3 class="m-2">
+                  ¿Qué sucede si necesito cambiar de cuidador?
+                </h3>
+                <div class="faq-content">
+                  <p>
+                    En caso de que necesites un cambio, podés solicitarlo sin
+                    inconvenientes. Nuestro objetivo es garantizar tu
+                    tranquilidad y satisfacción.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <!-- Pregunta 9 -->
+              <div class="faq-item">
+                <h3 class="m-2">¿El servicio incluye asistencia médica?</h3>
+                <div class="faq-content">
+                  <p>
+                    No brindamos atención médica, pero nuestros cuidadores
+                    pueden acompañar a la persona a sus consultas médicas y
+                    ayudar en la administración de medicación recetada por un
+                    profesional.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <!-- Pregunta 10 -->
+              <div class="faq-item">
+                <h3 class="m-2">¿Cómo puedo contratar el servicio?</h3>
+                <div class="faq-content">
+                  <p>
+                    Podés comunicarte con nosotros a través de nuestra web, por
+                    teléfono o WhatsApp. Evaluaremos tu necesidad y te
+                    asesoraremos en la mejor opción para vos.
+                  </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right m-2"></i>
               </div>
@@ -835,7 +1007,9 @@
               novedades y promociones exclusivas!
             </p>
             <div class="social-links d-flex">
-              <a href="https://www.facebook.com/" target="_blank"
+              <a
+                href="https://www.facebook.com/share/1DCLJoP2Cr/"
+                target="_blank"
                 ><i class="bi bi-facebook"></i
               ></a>
               <a href="https://www.instagram.com/" target="_blank"
@@ -881,7 +1055,7 @@
     <div class="floating-buttons">
       <!-- Botón de Facebook -->
       <a
-        href="https://www.facebook.com/tuperfil"
+        href="https://www.facebook.com/share/1DCLJoP2Cr/"
         target="_blank"
         class="facebook"
       >
