--- a/index.html
+++ b/index.html
@@ -996,6 +996,10 @@
                 <i class="bi bi-chevron-right"></i>
                 <a href="#services">Limpieza final de obra</a>
               </li>
+              <li>
+                <i class="bi bi-chevron-right"></i>
+                <a href="#services">Asistencia y Cuidado de Personas</a>
+              </li>
             </ul>
           </div>
 
