agregado de redireccionado a instagran empresarial

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <a href="https://www.facebook.com/share/1DCLJoP2Cr/" target="_blank"
               ><i class="bi bi-facebook"></i
             ></a>
-            <a href="https://www.instagram.com/" class="instagram"
-              ><i class="bi bi-instagram"></i
+            <a href="https://www.instagram.com/coblanservicios?utm_source=qr&igsh=MXR0ZXphN3Y3NThsNQ==" class="instagram"
+            target="_blank" ><i class="bi bi-instagram" ></i
             ></a>
           </div>
         </div>
@@ -1016,7 +1016,7 @@
                 target="_blank"
                 ><i class="bi bi-facebook"></i
               ></a>
-              <a href="https://www.instagram.com/" target="_blank"
+              <a href="https://www.instagram.com/coblanservicios?utm_source=qr&igsh=MXR0ZXphN3Y3NThsNQ==" target="_blank"
                 ><i class="bi bi-instagram"></i
               ></a>
               <a href="https://wa.me/5492923507590" target="_blank"
@@ -1080,7 +1080,7 @@
       </a>
 
       <!-- Botón de Instagram -->
-      <a href="https://www.instagram.com/" target="_blank" class="instagram">
+      <a href="https://www.instagram.com/coblanservicios?utm_source=qr&igsh=MXR0ZXphN3Y3NThsNQ==" target="_blank" class="instagram">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
           alt="Instagram"
