--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    
+    <!-- SEO Meta Tags -->
+    <meta name="title" content="COBLAN - Servicios de Limpieza y Cuidado de Personas" />
+    <meta name="description" content="Ofrecemos soluciones de limpieza profesional y asistencia para el cuidado de personas en hogares, oficinas y comercios. Contáctanos para un servicio confiable y registrado." />
+    <meta name="keywords" content="limpieza, cuidado de personas, servicios de limpieza, hogar, oficinas, empresas, Coblan, Argentina" />
+    <meta name="author" content="COBLAN Servicios" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="COBLAN - Servicios de Limpieza y Cuidado de Personas" />
+    <meta property="og:description" content="Servicios de limpieza profesional y asistencia para el cuidado de personas en hogares, oficinas y empresas en Argentina." />
+    <meta property="og:image" content="https://coblan.org/assets/logo.png" />
+    <meta property="og:url" content="https://coblan.org/" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="COBLAN - Servicios de Limpieza y Cuidado de Personas" />
+    <meta name="twitter:description" content="Limpieza profesional y asistencia para el cuidado de personas. Servicios confiables y registrados en Argentina." />
+    <meta name="twitter:image" content="https://coblan.org/assets/logo.png" />
+
+    <!-- Favicon -->
     <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
 
-    <!-- Agrega AOS CSS en el <head> -->
+    <!-- CSS Libraries -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css" />
 
-    <title>COBLAN</title>
-  </head>
+    <title>COBLAN - Servicios de Limpieza y Cuidado de Personas</title>
+</head>
+
   <body>
     <header id="header" class="header sticky-top">
       <div class="topbar d-flex align-items-center bg-dark">
