agregado de medios de pago

--- a/index.html
+++ b/index.html
@@ -4,25 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    
+
     <!-- SEO Meta Tags -->
-    <meta name="title" content="COBLAN - Servicios de Limpieza y Cuidado de Personas" />
-    <meta name="description" content="Ofrecemos soluciones de limpieza profesional y asistencia para el cuidado de personas en hogares, oficinas y comercios. Contáctanos para un servicio confiable y registrado." />
-    <meta name="keywords" content="limpieza, cuidado de personas, servicios de limpieza, hogar, oficinas, empresas, Coblan, Argentina" />
+    <meta
+      name="title"
+      content="COBLAN - Servicios de Limpieza y Cuidado de Personas"
+    />
+    <meta
+      name="description"
+      content="Ofrecemos soluciones de limpieza profesional y asistencia para el cuidado de personas en hogares, oficinas y comercios. Contáctanos para un servicio confiable y registrado."
+    />
+    <meta
+      name="keywords"
+      content="limpieza, cuidado de personas, servicios de limpieza, hogar, oficinas, empresas, Coblan, Argentina"
+    />
     <meta name="author" content="COBLAN Servicios" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="COBLAN - Servicios de Limpieza y Cuidado de Personas" />
-    <meta property="og:description" content="Servicios de limpieza profesional y asistencia para el cuidado de personas en hogares, oficinas y empresas en Argentina." />
+    <meta
+      property="og:title"
+      content="COBLAN - Servicios de Limpieza y Cuidado de Personas"
+    />
+    <meta
+      property="og:description"
+      content="Servicios de limpieza profesional y asistencia para el cuidado de personas en hogares, oficinas y empresas en Argentina."
+    />
     <meta property="og:image" content="https://coblan.org/assets/logo.png" />
     <meta property="og:url" content="https://coblan.org/" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="COBLAN - Servicios de Limpieza y Cuidado de Personas" />
-    <meta name="twitter:description" content="Limpieza profesional y asistencia para el cuidado de personas. Servicios confiables y registrados en Argentina." />
+    <meta
+      name="twitter:title"
+      content="COBLAN - Servicios de Limpieza y Cuidado de Personas"
+    />
+    <meta
+      name="twitter:description"
+      content="Limpieza profesional y asistencia para el cuidado de personas. Servicios confiables y registrados en Argentina."
+    />
     <meta name="twitter:image" content="https://coblan.org/assets/logo.png" />
 
     <!-- Favicon -->
@@ -30,12 +51,18 @@
 
     <!-- CSS Libraries -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="style.css" />
 
     <title>COBLAN - Servicios de Limpieza y Cuidado de Personas</title>
-</head>
+  </head>
 
   <body>
     <header id="header" class="header sticky-top">
@@ -58,8 +85,11 @@
             <a href="https://www.facebook.com/share/1DCLJoP2Cr/" target="_blank"
               ><i class="bi bi-facebook"></i
             ></a>
-            <a href="https://www.instagram.com/coblanservicios?utm_source=qr&igsh=MXR0ZXphN3Y3NThsNQ==" class="instagram"
-            target="_blank" ><i class="bi bi-instagram" ></i
+            <a
+              href="https://www.instagram.com/coblanservicios?utm_source=qr&igsh=MXR0ZXphN3Y3NThsNQ=="
+              class="instagram"
+              target="_blank"
+              ><i class="bi bi-instagram"></i
             ></a>
           </div>
         </div>
@@ -114,7 +144,7 @@
             <div class="d-flex">
               <a href="#services" class="btn-get-started">Nuestros Servicios</a>
               <a
-                href="https://wa.me/5492923507590"
+                href="https://wa.me/5492923500887"
                 class="btn-waths-app d-flex align-items-center"
               >
                 <i class="bi bi-whatsapp"></i><span>Contáctanos</span>
@@ -343,6 +373,23 @@
                   <li class="text-white">
                     <i class="bi bi-exclamation-circle"></i> Mínimo de 8 horas
                     mensuales de contratación.
+                  </li>
+                  <li class="text-white">
+                    <i class="bi bi-exclamation-circle"></i> Medios de pago:
+                    <ul class="mt-2 d-flex  flex-column">
+                      <li class="">
+                        <span><i class="bi bi-cash"></i> Efectivo</span>
+                      </li>
+                      <li class="mt-1">
+                        <span><i class="bi bi-bank"></i> Transferencia</span>
+                      </li>
+                      <li class="mt-1">
+                        <span
+                          ><i class="bi bi-credit-card-2-front"></i>
+                          Tarjeta</span
+                        >
+                      </li>
+                    </ul>
                   </li>
                 </ul>
               </div>
@@ -1031,7 +1078,9 @@
                 target="_blank"
                 ><i class="bi bi-facebook"></i
               ></a>
-              <a href="https://www.instagram.com/coblanservicios?utm_source=qr&igsh=MXR0ZXphN3Y3NThsNQ==" target="_blank"
+              <a
+                href="https://www.instagram.com/coblanservicios?utm_source=qr&igsh=MXR0ZXphN3Y3NThsNQ=="
+                target="_blank"
                 ><i class="bi bi-instagram"></i
               ></a>
               <a href="https://wa.me/5492923507590" target="_blank"
@@ -1095,7 +1144,11 @@
       </a>
 
       <!-- Botón de Instagram -->
-      <a href="https://www.instagram.com/coblanservicios?utm_source=qr&igsh=MXR0ZXphN3Y3NThsNQ==" target="_blank" class="instagram">
+      <a
+        href="https://www.instagram.com/coblanservicios?utm_source=qr&igsh=MXR0ZXphN3Y3NThsNQ=="
+        target="_blank"
+        class="instagram"
+      >
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
           alt="Instagram"
