--- a/index.html
+++ b/index.html
@@ -6,63 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- SEO Meta Tags -->
-    <meta
-      name="title"
-      content="COBLAN - Servicios de Limpieza y Cuidado de Personas"
-    />
-    <meta
-      name="description"
-      content="Ofrecemos soluciones de limpieza profesional y asistencia para el cuidado de personas en hogares, oficinas y comercios. Contáctanos para un servicio confiable y registrado."
-    />
-    <meta
-      name="keywords"
-      content="limpieza, cuidado de personas, servicios de limpieza, hogar, oficinas, empresas, Coblan, Argentina"
-    />
+    <meta name="title" content="COBLAN - Servicios de Limpieza en Casbas y Cuidado de Personas" />
+    <meta name="description" content="Empresa de limpieza en Casbas. Ofrecemos soluciones profesionales de limpieza y asistencia para el cuidado de personas en hogares, oficinas y comercios. Contáctanos para un servicio confiable y registrado." />
+    <meta name="keywords" content="limpieza en Casbas, servicio de limpieza en Casbas, empresa de limpieza Casbas, cuidado de personas Casbas, limpieza profesional Casbas, limpieza de oficinas Casbas, Coblan, Argentina" />
     <meta name="author" content="COBLAN Servicios" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="COBLAN - Servicios de Limpieza y Cuidado de Personas"
-    />
-    <meta
-      property="og:description"
-      content="Servicios de limpieza profesional y asistencia para el cuidado de personas en hogares, oficinas y empresas en Argentina."
-    />
+    <meta property="og:title" content="COBLAN - Servicios de Limpieza en Casbas y Cuidado de Personas" />
+    <meta property="og:description" content="Empresa de limpieza en Casbas. Ofrecemos soluciones profesionales de limpieza y asistencia para hogares, oficinas y empresas en Argentina." />
     <meta property="og:image" content="https://coblan.org/assets/logo.png" />
     <meta property="og:url" content="https://coblan.org/" />
+    <meta property="og:site_name" content="COBLAN" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="COBLAN - Servicios de Limpieza y Cuidado de Personas"
-    />
-    <meta
-      name="twitter:description"
-      content="Limpieza profesional y asistencia para el cuidado de personas. Servicios confiables y registrados en Argentina."
-    />
+    <meta name="twitter:title" content="COBLAN - Servicios de Limpieza en Casbas y Cuidado de Personas" />
+    <meta name="twitter:description" content="Empresa de limpieza en Casbas. Servicios confiables y registrados en Argentina." />
     <meta name="twitter:image" content="https://coblan.org/assets/logo.png" />
 
+    <!-- Schema Markup (Logo en Google) -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "COBLAN",
+        "url": "https://coblan.org",
+        "logo": "https://coblan.org/assets/logo.png",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+54 02923-500887",
+            "contactType": "customer service",
+            "areaServed": "AR",
+            "availableLanguage": "Spanish"
+        }
+    }
+    </script>
+
     <!-- Favicon -->
-    <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <!-- CSS Libraries -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css" />
 
-    <title>COBLAN - Servicios de Limpieza y Cuidado de Personas</title>
-  </head>
+    <title>COBLAN - Servicios de Limpieza en Casbas y Cuidado de Personas</title>
+</head>
+
+
 
   <body>
     <header id="header" class="header sticky-top">
